# pyrinas-zephyr

./: .editorconfig  .gitignore  .gitmodules  .vscodeignore  CMakeLists.txt  Kconfig.pyrinas  README.md  setenv  west.yml
applications/bridge/: CMakeLists.txt  Kconfig  Makefile  prj.conf  sample.yaml
applications/bridge/boards/: circuitdojo_feather_nrf9160_ns.overlay
applications/bridge/src/: ble.c  ble.h  ble_handlers.h  main.c
applications/bridge/src/proto/: Kconfig  command.pb.c
applications/client/: CMakeLists.txt  Kconfig  Makefile  prj.conf
applications/client/boards/: particle_xenon.conf
applications/client/src/: app.c
applications/hub/: CMakeLists.txt  Makefile  prj.conf
applications/hub/boards/: circuitdojo_feather_nrf9160ns.conf  circuitdojo_feather_nrf9160ns.overlay
applications/hub/src/: app.c
applications/sample/: .gitignore  CMakeLists.txt  Kconfig  Makefile  prj.conf
applications/sample/lib/include/: libpyrinas_codec_example.h
applications/sample/src/: app.c  version.c
drivers/rtc/pcf85063a/: Kconfig  pcf85063a.c  pcf85063a.h
ext/: CMakeLists.txt
include/app/: app.h  app_includes.h  version.h
include/ble/: ble_central.h  ble_char_info.h  ble_handlers.h  ble_m.h  ble_peripheral.h  ble_pyrinas.h  ble_settings.h
include/ble/services/: pyrinas.h  pyrinas_client.h
include/cellular/: cellular.h
include/comms/: comms.h
include/ota/: cert.h  trustid-x3-root
include/pyrinas_cloud/: pyrinas_cloud.h  pyrinas_cloud_codec.h  pyrinas_cloud_ota.h  pyrinas_cloud_version.h
include/worker/: worker.h
lib/: CMakeLists.txt  Kconfig  Makefile.common
lib/app/: app_weak.c  main.c
lib/at_shell/: CMakeLists.txt  Kconfig
lib/ble/: CMakeLists.txt  Kconfig  ble_central.c  ble_m.c  ble_peripheral.c
lib/ble/services/: pyrinas_client.c
lib/cloud/: CMakeLists.txt  Kconfig  pyrinas_cloud.c  pyrinas_cloud_codec.c  pyrinas_cloud_helper.c  pyrinas_cloud_ota.c  pyrinas_cloud_version.c
lib/proto/: CMakeLists.txt  Makefile  command.pb.c  command.pb.h
lib/shell/: CMakeLists.txt  Kconfig  at_shell.c  credentials_shell.c  settings_shell.c
samples/hci_uart/: prj.conf
samples/hci_uart/boards/: particle_xenon.conf  particle_xenon.overlay
samples/hci_uart/src/: main.c
scripts/: manifest-generator.ts
subsys/: CMakeLists.txt  Kconfig
subsys/cellular/: CMakeLists.txt  Kconfig  cellular.c
subsys/comms/: CMakeLists.txt  Kconfig  comms.c
subsys/pyrinas_cloud/: CMakeLists.txt  Kconfig  pyrinas_cloud.c  pyrinas_cloud_codec.c  pyrinas_cloud_codec.h  pyrinas_cloud_helper.c  pyrinas_cloud_helper.h  pyrinas_cloud_version.c  pyrinas_cloud_version.h
subsys/worker/: CMakeLists.txt  Kconfig  worker.c
zephyr/: module.yml
